RESOLVED FIXED312534
[JSC] Fix null-env deref in CyclicModuleRecord::initializeEnvironment for WebAssembly modules
https://bugs.webkit.org/show_bug.cgi?id=312534
Summary [JSC] Fix null-env deref in CyclicModuleRecord::initializeEnvironment for Web...
Sosuke Suzuki
Reported 2026-04-16 18:53:33 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-04-16 18:54:06 PDT
EWS
Comment 2 2026-04-16 23:01:38 PDT
Committed 311428@main (e236b9dd9455): <https://commits.webkit.org/311428@main> Reviewed commits have been landed. Closing PR #62943 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-16 23:02:12 PDT
Note You need to log in before you can comment on or make changes to this bug.