[JSC] Fix null-env deref in CyclicModuleRecord::initializeEnvironment for WebAssembly modules https://bugs.webkit.org/show_bug.cgi?id=312534

Reviewed by Yusuke Suzuki.

initializeEnvironment was hoisted to the shared base class but its JS
import-entry loop was not guarded. For WebAssemblyModuleRecord, jsModule is
null so env is never constructed, yet JSWebAssemblyInstance still populates
importEntries(). When a wasm Single import targets a JS `export * as foo`
binding, resolveExport returns a namespace binding and
symbolTablePutTouchWatchpointSet derefs a null env.

Gate the loop on jsModule; the ENABLE(WEBASSEMBLY) block below still runs.

Tests: JSTests/wasm/modules/wasm-imports-js-namespace-reexport.js
       JSTests/wasm/modules/wasm-imports-js-namespace-reexport/inner.js
       JSTests/wasm/modules/wasm-imports-js-namespace-reexport/reexport.js

* JSTests/wasm/modules/wasm-imports-js-namespace-reexport.js: Added.
* JSTests/wasm/modules/wasm-imports-js-namespace-reexport/importer.wasm: Added.
* JSTests/wasm/modules/wasm-imports-js-namespace-reexport/importer.wat: Added.
* JSTests/wasm/modules/wasm-imports-js-namespace-reexport/inner.js: Added.
(export.sum):
* JSTests/wasm/modules/wasm-imports-js-namespace-reexport/reexport.js: Added.
* Source/JavaScriptCore/runtime/CyclicModuleRecord.cpp:
(JSC::CyclicModuleRecord::initializeEnvironment):

Canonical link: https://commits.webkit.org/311428@main